--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Firebase
+.firebase/
+.firebaserc
+firebase.json
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
